--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-hook-form": "^7.40.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.5",
     "tw-elements": "^1.0.0-alpha13",
     "web-vitals": "^2.1.4"
   },
